patch from net (thanks Boris) This fix correctly sets the content type for uploads for multipart posts b=60737, r=rods sr=buster